# Aria-loan-recovery-agent

./: .gitignore  README.md  docker-compose.yml
agent/: pyproject.toml
agent/app/: __init__.py  agent_brain.py  borrower_repo.py  compliance.py  config.py  conversation.py  db.py  emotion.py  events.py  intent_extractor.py  main.py  memory.py  personality.py  pipeline.py  sarvam_service.py  twilio_voice.py  voice_pipeline.py
agent/scripts/: make_call.py
web/: package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: borrower-profile.tsx  borrower-queue.tsx  call-history.tsx  emotion-chart.tsx  live-call-card.tsx  metric-tile.tsx  payment-timeline.tsx  quick-call-form.tsx  stats-header.tsx  transcript-view.tsx
web/lib/: api.ts  socket.ts  types.ts
