[project]
name = "aria-agent"
version = "0.1.0"
description = "Compassionate AI loan recovery voice agent"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "python-multipart>=0.0.20",
    "twilio>=9.3.0",
    "openai>=1.50.0",
    "deepgram-sdk>=3.7,<4.0",
    "elevenlabs>=1.10.0",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "numpy>=1.26.0",
    "audioop-lts>=0.2.1; python_version >= '3.13'",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "redis[hiredis]>=5.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = ["ruff>=0.7.0", "pytest>=8.3.0", "pytest-asyncio>=0.24.0"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
